gcc/testsuite/rust/rustc/ui/parser/issues/issue-104367.rs
#[derive(A)]
struct S {
    d: [u32; {
        #![cfg] {
            #![w,) // { dg-error "" "" { target *-*-* } }
                   // { dg-error "" "" { target *-*-* } }

